# Pymodoro-CLI

./: LICENSE  README.md  pomodoro.py  pyproject.toml  requirements-dev.txt
tests/: __init__.py  conftest.py  test_argparse.py  test_compte_a_rebours.py  test_integration.py  test_son.py  test_terminal.py  test_utilitaires.py
